// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ui should draw the UI: snapshot-draw-ui0 1`] = `
<div
  class="box not-selected selectable draggable resizeable isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 100px; height: 100px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui0 2`] = `
<div
  class="box not-selected selectable draggable resizeable isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 100px; height: 100px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui1 1`] = `
<div
  class="box not-selected selectable draggable resizeable isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 100px; height: 100px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui1 2`] = `
<div
  class="box not-selected selectable draggable resizeable isDropZone"
  style="position: absolute; top: 100px; left: 100px; width: 100px; height: 100px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;

exports[`Ui should draw the UI: snapshot-draw-ui2 1`] = `
<div
  class="box not-selected selectable draggable resizeable isDropZone"
  style="position: absolute; top: 10000px; left: 10000px; width: 10000px; height: 10000px; border-width: 1px;"
>
  
      
  <div
    class="handle handle-nw"
  />
  
      
  <div
    class="handle handle-ne"
  />
  
      
  <div
    class="handle handle-sw"
  />
  
      
  <div
    class="handle handle-se"
  />
  
    
</div>
`;
